fixed some header and menu styling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -469,10 +469,14 @@
 
 .logo {
   margin-right: -60px;
+  margin-left: -90px;
+  margin-top: -5px;
 }  
 
 .nav-and-menu {
   margin-left: 0px;
+  margin-left: 80px;
+  margin-top: 35px;
 }  
 
 .nav {
@@ -500,7 +504,7 @@
   right: 0;
   top: 0;
   width: 100%;
-  height: 100vh;
+  height: 200vh;
   background-color: #ff6839;
 }
 
